--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "nodejs-app",
+  "name": "ui5-wcr-movie-database",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start":"node server.js"
+    "start": "node index.js",
+    "test": "exit 0"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.3",
-    "http-proxy-middleware": "^2.0.6",
-    "nodemon": "^3.1.0"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "swagger-autogen": "^2.23.5"
   }
-
 }
